--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* App.css */
+/* App.css
 .App {
   text-align: center;
   padding: 2rem;
@@ -14,4 +14,4 @@
 .App p {
   color: #555;
   font-size: 1.2rem;
-}
+} */
