--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,2 @@
-/* index.css */
+@import "tailwindcss";
 
-/* Reset some default browser styles */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #f9f9f9;
-  color: #333;
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.6;
-}
-
-/* Make root element take full height */
-#root {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
